# learn-rust

./: .gitignore  .pre-commit-config.yaml  flake.nix
actix-gcd/: Cargo.toml
actix-gcd/src/: main.rs
csv-serde/: Cargo.toml
csv-serde/data/starbucks/: reviews_data.json
csv-serde/src/: image_links.rs  lib.rs  main.rs  naive_date.rs  rating.rs
hello-R/: Cargo.toml
hello-R/src/: main.rs
huffman-coding/: Cargo.toml
huffman-coding/src/: main.rs
json-serde/: Cargo.toml
json-serde/src/: lib.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
plot-me/: Cargo.toml
progress/: Cargo.toml
progress/src/: main.rs
sort-algos/: Cargo.toml
sort-algos/src/: main.rs
trie-me/: Cargo.toml
trie-me/src/: main.rs
