[package]
name = "huffman-coding"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-vec = { version = "0.8.0", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive", "debug", "env"] }
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
